--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,18 @@
-numpy==1.18.5
-pandas==1.4.2
-matplotlib==3.3.1
-seaborn==0.11.0
-pandas-profiling==3.1.0
+numpy>=1.21.0,<1.24.0
+pandas>=1.3.0,<1.5.0
+matplotlib>=3.4.0,<3.5.0
+seaborn>=0.11.0,<0.12.0
+ydata-profiling>=3.1.0,<4.0.0
 plotly==4.12.0
 ppscore==1.2.0
 
-streamlit==0.85.0
+streamlit>=1.0.0,<1.1.0
 
 feature-engine==1.0.2
 imbalanced-learn==0.8.0
-scikit-learn==0.24.2
+scikit-learn>=0.24.2,<0.25.0
 xgboost==1.2.1
-yellowbrick==1.3
+yellowbrick>=1.3,<1.4
 Jinja2==3.1.1
 MarkupSafe==2.0.1
 protobuf==3.20
