--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ streamlit>=1.0.0,<1.1.0
 
 feature-engine==1.0.2
 imbalanced-learn==0.8.0
-scikit-learn>=0.24.2,<0.25.0
+scikit-learn>=1.0.0,<1.1.0
 xgboost==1.2.1
 yellowbrick>=1.3,<1.4
 Jinja2==3.1.1
@@ -18,3 +18,5 @@ MarkupSafe==2.0.1
 protobuf==3.20
 ipywidgets==8.0.2
 altair<5
+
+Cython>=0.29.24,<0.30
